# monopoly

./: .gitignore  DESIGN.md  GETTING_STARTED.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/frontend/: .env.example  README.md  index.html  package-lock.json  package.json
apps/frontend/src/: App.tsx  board.ts  styles.css  types.ts
docs/: INTEGRATION_TEST_SUMMARY.md  game-simulation.md
infrastructure/init-db/: 01-schema.sql
plans/: AI_AGENT_SERVICE_PLAN.md  GAME_ENGINE_V1_PLAN.md  ORCHESTRATOR_SERVICE_PLAN.md
services/ai-agent/: .env.example  Dockerfile  README.md  pyproject.toml
services/ai-agent/src/: __init__.py  config.py  main.py
services/ai-agent/src/agent/: __init__.py  manager.py  monopoly_agent.py
services/ai-agent/src/api/: __init__.py  routes.py
services/ai-agent/src/client/: __init__.py  game_client.py  models.py
services/ai-agent/src/llm/: __init__.py  ollama_client.py  session.py
services/ai-agent/src/parser/: __init__.py  action_parser.py
services/ai-agent/src/prompts/: __init__.py  builder.py  personalities.py  templates.py
services/ai-agent/src/tests/: __init__.py  conftest.py  test_action_parser.py  test_api.py  test_personalities.py  test_prompt_builder.py  test_session.py
services/game-engine/: .env.example  Dockerfile  README.md  pyproject.toml
services/game-engine/src/: __init__.py  config.py  database.py  main.py
services/game-engine/src/api/: __init__.py  games.py  router.py
services/game-engine/src/data/: __init__.py  board.py  chance_cards.py  community_chest.py  properties.py
services/game-engine/src/db/: __init__.py  models.py  repositories.py
services/game-engine/src/engine/: __init__.py  bankruptcy.py  building_rules.py  card_executor.py  dice.py  game_manager.py  jail_rules.py  movement.py  property_rules.py
services/game-engine/src/models/: __init__.py  actions.py  board.py  cards.py  events.py  game.py  player.py  property.py
services/game-engine/src/tests/: __init__.py  conftest.py  test_bankruptcy.py  test_building_rules.py  test_dice.py  test_jail_rules.py  test_movement.py  test_property_rules.py
services/orchestrator/: .env.example  Dockerfile  WEBSOCKET_EVENTS.md  pyproject.toml
services/orchestrator/src/: __init__.py  config.py  main.py
services/orchestrator/src/api/: routes.py
services/orchestrator/src/clients/: __init__.py  ai_agent.py  game_engine.py
services/orchestrator/src/game/: __init__.py  loop.py  state.py
services/orchestrator/src/tests/: conftest.py  test_clients.py  test_events.py  test_game_loop.py  test_game_state.py
services/orchestrator/src/ws/: __init__.py  events.py  handlers.py  server.py
